# c-semantics

./: .gitignore  .ideas  BUILD.md  Makefile  Makefile.am  Vagrantfile  bootstrap.sh  com.runtimeverification.rv-match.json  configure  configure.ac  fedora.mk  future.json  ideas.txt  make
.build/: dependencies.mk  inc.mk
.deps/: Fedora.mk  deps.mk  system.mk
.deps/k/: Makefile
.deps/perl/: Makefile  deps.mk
.src/: inc.mk
.src/semantics/: Makefile
clang-tools/: ClangKast.cc
components/: README.md
components/clang-tools/: Makefile.am  Makefile.in  configure  configure.ac  inc.mk.in
components/cparser/: Makefile.am  Makefile.in  configure  configure.ac
components/cparser/src/: Makefile  Makefile.am  base64.ml  errormsg.ml  xmlPrinter.ml
components/kcc/: Makefile.am  Makefile.in  build.sh.in  configure  configure.ac
components/kcc/src/: Makefile.am  Makefile.in
components/kcc/src/RV_Kcc/: Opts.pm
components/native-server/: Makefile.am  bootstrap.sh  configure.ac
cpp-parser/: ClangKast.cc
scripts/: indenter.c  kcc
scripts/RV_Kcc/: Opts.pm
semantics/: Makefile  Makefile2  c-cpp-execution.k  c-translation.k  cpp-translation.k  definitions.mk
semantics/c11/language/execution/: check-loc.k  configuration.k  execution.k
semantics/c11/language/execution/expr/: function-call.k
semantics/c11/language/execution/stmt/: return.k
semantics/common/: common.k  configuration.k  function-call.k  ks.k  return.k  thread_local.k
semantics/cpp/language/common/: class.k  dynamic.k  reference.k  typing.k
semantics/cpp/language/translation/: overloading.k
semantics/cpp/language/translation/decl/: class.k  declarator.k  initializer.k
semantics/cpp/language/translation/expr/: function-call.k  new.k  reference.k
semantics/cpp14/language/common/: binding.k  common.k  conversion.k  dynamic.k  syntax.k  typing.k
semantics/cpp14/language/common/decl/: declarator.k
semantics/cpp14/language/common/expr/: conditional.k  eval.k  function-call.k  members.k  name.k
semantics/cpp14/language/common/memory/: reading.k
semantics/cpp14/language/common/stmt/: block.k  if.k  loop.k  return.k
semantics/cpp14/language/execution/: env.k  execution.k  init.k  io.k
semantics/cpp14/language/execution/decl/: declarator.k
semantics/cpp14/language/execution/expr/: function-call.k  members.k  name.k  new.k
semantics/cpp14/language/execution/stmt/: block.k  goto.k  return.k  try.k
semantics/cpp14/language/translation/: configuration.k  constant.k  elaborator.k  env.k  init.k  io.k  name.k  operators.k  overloading.k  process-label.k  syntax.k  template-deduction.k  translation.k
semantics/cpp14/language/translation/decl/: class.k  declarator.k  enum.k  initializer.k  linkage.k  namespace.k  template.k  typedef.k  using.k
semantics/cpp14/language/translation/expr/: assignment.k  function-call.k  members.k
semantics/cpp14/language/translation/stmt/: block.k  canonicalization.k  expr.k  goto.k  if.k  loop.k  return.k  try.k
semantics/cpp14/language/translation/typing/: canonicalization.k  expr.k
setup/: README.md  build-docker-images.sh
setup/c-cpp-semantics/: Dockerfile  build-docker-images.sh
setup/c-cpp-semantics/src/: deps-alpine.sh  deps-debian.sh  deps-fedora.sh  install-c-cpp-semantics.sh  install-clang.sh
setup/docker/k/: Dockerfile
setup/docker/k-alpine/: Dockerfile
setup/docker/k-fedora/: Dockerfile
setup/k-framework/: Dockerfile  build-docker-images.sh
setup/k-framework/src/: deps-alpine.sh  install-k.sh  k-deps-debian.sh  k-deps-fedora.sh
setup/scripts/: bootstrap.sh  env.sh  install-c-cpp-semantics.sh  install-clang.sh  install_k.sh  settings.sh
setup/vagrant/fedora-28/: Vagrantfile
setup/vagrant/ubuntu-16.04/: Vagrantfile
setup/vagrant/ubuntu-18.04/: Vagrantfile
src/: Makefile  inc.mk
src/clang-tools/: Makefile
src/cparser/: Makefile
src/kcc/: Makefile
src/kcc/RV_Kcc/: Files.pm
src/native-server/: Makefile
src/native-server/src/: Makefile
src/semantics/: Makefile
src/semantics/src/: Makefile
src/src/kcc/: Makefile
tests/: Makefile  testind.sh
tests/unit-fail-compilation/: odr-destructor-in-aggregate-initialization.C
tests/unit-pass/: class-virtual-defaulted-dtor.C  constexpr.C  constructor-1.C  enum-empty.C  enum-in-class.C  enumerators.C  ref-bind-class-prv.C
travis/: build.sh
