# Autoconf requirements

# AC_INIT
AC_INIT([com.runtimeverification.rv-match.cparser], [1.0])

# Information on the packages

# Checks for programs

# Checks for libraries

# Checks for header files

# Checks for types

# Checks for structures

# Checks for compiler characteristics
AC_PROG_CC

# Checks for library functions

# Checks for system services

# AC_CONFIG_FILES

# AC_OUTPUT
